--- a/AdminPortal/src/app/user-management/process-config/process-config.component.html
+++ b/AdminPortal/src/app/user-management/process-config/process-config.component.html
@@ -88,7 +88,7 @@
                                             <div class="col-md-12 flex-single-row">
                                                 <div class="flex-single-row-inner">
                                                     <h4>Inactive Sub-Users Report</h4>
-                                                    <mat-form-field style="">
+                                                    <mat-form-field>
                                                         <mat-label>Select Time</mat-label>
                                                         <mat-select name="SchedulerInactiveSubUsers" [disabled]=isdesable
                                                             [(ngModel)]="schedulerData.SchedulerInactiveSubUsers">
@@ -105,7 +105,7 @@
                                             <div class="col-md-12 flex-single-row">
                                                 <div class="flex-single-row-inner">
                                                     <h4>Invalid Items Report</h4>
-                                                    <mat-form-field style="">
+                                                    <mat-form-field>
                                                         <mat-label>Select Time</mat-label>
                                                         <mat-select name="SchedulerInvalidItems" [disabled]=isdesable
                                                             [(ngModel)]="schedulerData.SchedulerInvalidItems">
@@ -118,6 +118,23 @@
                                                 <button class="custom-btn" style="margin-right: 110px;" type="submit"
                                                     [disabled]=isdesable
                                                     (click)="addSchedulerInvalidItems(userRegistrationForm)">Submit</button>
+                                            </div>
+                                            <div class="col-md-12 flex-single-row">
+                                                <div class="flex-single-row-inner">
+                                                    <h4>Inactive Sub-Users Report For Admin</h4>
+                                                    <mat-form-field>
+                                                        <mat-label>Select Time</mat-label>
+                                                        <mat-select name="SchedulerInactiveSubUsersForAdmin" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.SchedulerInactiveSubUsersForAdmin">
+                                                            <mat-option *ngFor="let time of reportTiming" [value]="time">
+                                                                {{time}}
+                                                            </mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
+                                                <button class="custom-btn" style="margin-right: 110px;" type="submit"
+                                                    [disabled]=isdesable
+                                                    (click)="addSchedulerInactiveSubUsersForAdmin(userRegistrationForm)">Submit</button>
                                             </div>
                                         </mat-tab>
                                         <mat-tab class="tab-border" label="Sync Now">
