--- a/AdminPortal/src/app/user-management/process-config/process-config.component.html
+++ b/AdminPortal/src/app/user-management/process-config/process-config.component.html
@@ -136,6 +136,23 @@
                                                     [disabled]=isdesable
                                                     (click)="addSchedulerInactiveSubUsersForAdmin(userRegistrationForm)">Submit</button>
                                             </div>
+                                            <div class="col-md-12 flex-single-row">
+                                                <div class="flex-single-row-inner">
+                                                    <h4>PO Report</h4>
+                                                    <mat-form-field>
+                                                        <mat-label>Select Time</mat-label>
+                                                        <mat-select name="SchedulerPOReport" [disabled]=isdesable
+                                                            [(ngModel)]="schedulerData.SchedulerPOReport">
+                                                            <mat-option *ngFor="let time of reportTiming" [value]="time">
+                                                                {{time}}
+                                                            </mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                                </div>
+                                                <button class="custom-btn" style="margin-right: 110px;" type="submit"
+                                                    [disabled]=isdesable
+                                                    (click)="addSchedulerPOReport(userRegistrationForm)">Submit</button>
+                                            </div>
                                         </mat-tab>
                                         <mat-tab class="tab-border" label="Sync Now">
 
