user cart report

--- a/AdminPortal/src/app/components/sidebar/sidebar.component.html
+++ b/AdminPortal/src/app/components/sidebar/sidebar.component.html
@@ -79,6 +79,12 @@
           </a>
         </li>
         <li>
+          <a [routerLink]="['/Usercartreport', userId, memRefNo,userType]" routerLinkActive="active">
+            &nbsp; <i class="fa-regular fa-file-lines fa-lg"></i> &nbsp; 
+            <p>User Cart Report</p>
+          </a>
+        </li>
+        <li>
           <a [routerLink]="['/activitylogs', userId, memRefNo,userType]" routerLinkActive="active">
             &nbsp; <i class="fa-regular fa-file-lines fa-lg"></i> &nbsp; 
             <p>Activity Logs</p>
